# mailinglist-services

./: .env_sample  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  compose.yml  pyproject.toml  requirements.txt
accounts/: admin.py  factories.py  forms.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/registration/: account_activation_email.html  login.html  password_change_done.html  password_change_form.html  registration_pending.html  signup.html
accounts/tests/: test_forms.py  test_models.py  test_views.py
api/: serializers.py  urls.py  views.py
config/: settings.py  urls.py
mailinglist/: admin.py  apps.py  emails.py  factories.py  forms.py  mixins.py  models.py  signals.py  tasks.py  urls.py  views.py
mailinglist/migrations/: 0001_initial.py  0002_subscribermessage.py  0003_alter_mailinglist_owner_alter_message_mailing_list_and_more.py
mailinglist/templates/mailinglist/: confirm_subscription.html  mailinglist_confirm_delete.html  mailinglist_detail.html  mailinglist_form.html  mailinglist_list.html  message_detail.html  message_form.html  subscriber_form.html  subscription_thank_you.html  unsubscribe.html
mailinglist/templates/mailinglist/email/: base.html
mailinglist/templates/mailinglist/email_templates/: confirmation.html  confirmation.txt  subscriber_message.html  subscriber_message.txt
mailinglist/tests/: test_urls.py  test_views.py
templates/: base.html
